styles/styles.css
.container {
	width: 80%;
	margin: 0 auto;
}

.nav {
	font-family: 'Lato', sans-serif;
	background-color: #DBA0A0;
	padding: 15px 0;
	width: 100%;
	text-align: center;
}

.nav a {
	font-size: 1rem;
	display: inline-block;
	color: white;
	text-decoration: none;
	padding: 0 20px;
	transition: color .1s;
}

 .nav a:hover {
	color: maroon;
}

header {
	background:black;
	height: 575px;
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/header_background.jpg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}

h1 {
	font-family: 'Bree Serif', serif;
	text-transform: uppercase;
	text-align: center;
	margin-top: 0;
	text-transform: uppercase;
    color: #FFFCFC;
    font-weight: 50;
    font-size: 3.5rem;
    padding-top: 130px;
}

/* ===== Beginning of Our Story Styles =====*/


.flex-container {
	margin: 75px 0;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}


.flex1 {
	width: 500px;
	height: 500px;
	max-width: 100%;
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/interior.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
	flex-basis: 50%;
}


.flex2 {
	flex-basis: 50%;
	margin-left: 40px;
}

.flex2 h2 {
	font-family: 'Open Sans', sans-serif;
	text-transform: uppercase;
	color: #945679;
	margin-top: -4px;
	font-size: 1.3rem;
	line-height: 1.8;

}

.flex2 p {
	margin-top: -4px;
	font-family: 'Open Sans', sans-serif;
	color: grey;
	font-weight: 300;
	font-size: .85rem;
	line-height: 1.8;
}

.underline {
	width: 25%;
	padding-top: 45px;
	border-bottom: 2px #945679 solid;
}

/*=== End of Our Story Styles====*/



/*=== Beginning Trending Menu Styles====*/

#menu-slider {
	padding: 20px 0;
	background-color: #819999;
}

.seasonal-title {
	font-family: 'Bree Serif', serif;
	color: #FBFCF8;
	font-size: 2rem;
	text-align: center;
}

.trending-title {
	font-family: 'Open Sans', sans-serif;
	color: white;
	padding-bottom: 20px;
	margin-top: 50px;
	text-align: center;
	text-transform: uppercase;
	font-size: .8rem;
	letter-spacing: 5px;
}

.left, .middle, .right {
	width: 33.33%;
	margin-bottom: 50px;
	float: left;
}


.box {
	background-color: #D2E1D2;
	padding: 20px;
	margin-left: 20px;
}

 .box-link{
	font-family: 'Lato', sans-serif;
	color: white;
	text-decoration: none;
	text-align: center;
	display: block;

}

.boxes {
	padding-bottom: 50px;
}

.box-image1, .box-image2, .box-image3 {
	position: relative;
	width: 100%;
	height: 220px;
	margin-bottom: 50px;

}

.box-image1 {
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/coffee.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}

.box-image2 {
	background-image: linear-gradient( rgba(0, 0, 0, .1), rgba(0, 0, 0, .1) ),url('../imgs/seeds.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}


.box-image3 {
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/brownie.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}

.overlay {
	font-family: 'Lato', sans-serif;
	color: white;
	position: absolute;
	bottom: 0;
	left: 50%;
	transform: translate(-50%);
	font-size: 1rem;
	background: rgba(139,131,134,0.41);
	height: 70px;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
}

.title {
	font-family: 'Open Sans', sans-serif;
	color: #569456;
	display: block;
	font-size: 1rem;
	font-weight: 600;
	line-height: 1.5;
	text-align: center;
}

.details {
	font-family: 'Open Sans', sans-serif;
	color: #416F6F;
	margin: 0;
	padding-bottom: 10px;
	line-height: 2;
	font-size: .9rem;
	font-weight: 300;
	text-align: center;
}

/*=== End of Trending Menu Styles===*/


/*=== Beginning of Main Menu Styles===*/
#main-menu{
	background-color: #fff;
	text-align: center;
	padding: 75px;
}

#main-menu ul {
	list-style-type: none;
}

#main-menu h2 {
	font-family: 'Bree Serif', serif;
	color: #505050;
	margin-top: 50px;
	font-size: 2rem;
	text-align: center;
}

.grid {
	margin: 0 auto;
	text-align: center;
	padding: 15px;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-template-rows: 1fr;
}

.col-title {
	font-family: 'Lato', sans-serif;
	color: #945679;
	padding: 20px 0 0 0;
	text-transform: uppercase;
	font-weight: 400;
	font-size: .9rem;
}

.food {
	font-family: 'Open Sans', sans-serif;
	width: 100%;
	color: black;
	font-size: .8rem;
	letter-spacing: .1rem;
	font-weight: 300;
	line-height: 2;
}


/*=== End of Main Menu Styles===*/

/*== Start Newsletter Styles===*/


#promotional {
	padding: 20px;
}

.flex3 {
	background-color: #F5DEB3;
	font-family: 'Open Sans', sans-serif;
	text-transform: uppercase;
	color: brown;
	padding: 100px 50px;
	width: 50%;
	margin: 0 auto;
	font-size: 1.3rem;
	line-height: 1;
	text-align: center;
}

.flex3 h2{
	font-family: 'Bree Serif', serif;
	color: #332661;
	margin: 20px 0;
	padding: 0 0 15px 0;
	font-size: 2.5rem;
	text-align: center;
}

.flex3 span {
	font-family: 'Open Sans', sans-serif;
	color: #000;
	font-weight: 500;
	line-height: 3;
	font-size: .9rem;
	letter-spacing: .1rem;
	padding: 0 18px;
}

.btn {
	margin-top: 15px;
	padding-bottom: 45px;
	text-align: center;
}

.btn a {
	font-family: 'Lato', sans-serif;
	font-size: 1rem;
	font-weight: 400;
	color: white;
	background-color: #655A8F;
	border: 2px solid black;
	border-radius: 5px;
	display: inline-block;
	text-decoration: none;
	padding: 10px 30px;
}

.btn :hover {
	color: black;
	background-color: lightgrey;
}

.flex4 {
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/promoimg.jpg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
	width: 50%;
	padding: 70px;
	text-align: center;
	font-family: 'Open Sans', sans-serif;
	text-transform: uppercase;
	margin:0 auto;
	font-size: 1.3rem;
	line-height: 1.8;
}

/*=== End Newsletter Styles ===*/

/*=== Beginning of Gallery Styles ===*/

.grid-wrapper {
	display: grid;
	grid-template-columns: 200px 200px 200px 200px 200px 200px ;
	grid-template-rows: 200px 200px;
	grid-gap: 2px;
	justify-content: center;
}


.item img{
	width: 100%;
	height: 100%;
}

.image1{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image1.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image2{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image2.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image3{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image3.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image4{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image4.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image5{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image5.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image6{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image6.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image7{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image7.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image8{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image8.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image9{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image9.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image10{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image10.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image11{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image11.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}
.image12{
	background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ),url('../imgs/image12.jpeg'); 
	background-position: center;
	background-repeat:   no-repeat;
	background-size: cover;
}


/*=== End of Gallery Styles===*/


/*== Beginning of Footer Styles===*/


/*=== End of Footer Styles===*/

